Fixed typeahead z-index, added confusion matrix to web-app, removed .jshintrc .jshintignore PLEASE STOP TRACKING THIS GUYS

--- a/web-app/public/css/app.css
+++ b/web-app/public/css/app.css
@@ -29,6 +29,7 @@ body {
   position: relative;
 }
 .typeahead .suggestions {
+  z-index: 999;
   width: 100%;
 }
 .typeahead .form-group {
